# mouse-clicker

./: README.md  index.html  package-lock.json  package.json  script.bat
src/: App.vue  global.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mouse.rs  pusher.rs  tray.rs
src/components/: MouseClicker.vue
